# mission-critical-sw-experiments

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  all_tests.cc  iceoyx_hoofs_test.cpp  models_test.cpp  rt_parts_test.cpp  rt_test.cpp
apps/: ReadMe.md
apps/safe/: CMakeLists.txt  arena.hpp  safe_eval.cpp  test_nomalloc.cpp
apps/secure/: CMakeLists.txt  cert_c.cpp
c89_c99_scheduler/source/time_triggered_arch/: config.h
c89_c99_scheduler/source/time_triggered_arch/logical_devices/: dvrOnBoardPreaml.c
c89_c99_scheduler/source/time_triggered_arch/scheduler/: coOperativeScheduler.c
c89_c99_scheduler/source/time_triggered_arch/scheduler_raw/: main.h  sch51.c
c89_c99_scheduler/source/time_triggered_arch/tasks/: onChain.c  onChain.h
c89_c99_scheduler/source/time_triggered_arch/vm/: virtualDvrPreampl.c  virtualDvrPreampl.h  vm.c
c89_c99_scheduler/tests/: coOperativeSchedulerTest.cc
modules/rtos_rte_cp/: CMakeLists.txt  main.cc  sched-example-1-above-LUB-failure-disharmonic.xlsx  sched-example-4-above-LUB-harmonic.xlsx
modules/rtos_rte_cp/RT-Clock/: posix_clock.c
modules/rtos_rte_cp/sequencer_generic/: seqgen.c  seqgenex0.c
modules/rtos_rte_cp/simplethread-affinity-1/: pthread.c
modules/rtos_rte_cp/timer/: itimer.c  itimer.d  posix_rt_timer  posix_rt_timer.d  posix_sw_wd.d  posix_timer.c
rtos_rte_cp/: sched-example-9-above-LUB-harmonic.xlsx  sched-example-simple-1-above-LUB-harmonic-showing-RR_failure.xlsx
rtos_rte_cp/RT-Clock/: posix_clock.h
rtos_rte_cp/sequencer_generic/: clock_times.c  seqgen.h  seqgen2.c  seqgen3.c
rtos_rte_cp/sequencer_generic/raspbian-ccr/: cycles.c  enable-ccr.c
rtos_rte_cp/simplethread-affinity/: pthread.c
rtos_rte_cp/simplethread1/: pthread.c
rtos_rte_cp/timer/: itimer  posix_rt_timer.c  posix_sw_wd  posix_sw_wd.c  posix_timer  posix_timer.d
safe/: CMakeLists.txt  safe_eval.cpp  test_nomalloc.cpp
scripts/: apply-style.sh
tests/: CMakeLists.txt  abseil_error_handling_test.cpp  alg_design_test.cpp  all_benches.cpp  all_tests.cc  arena.hpp  arena_alloc.hpp  compile_time_graph.cpp  cpp_concept_test.cpp  cpp_ranges_test.cpp  custome_primitives_test.cpp  gsl_explore_test.cpp  models.hpp  models_test.cpp  numa_avare_allocator_test.cpp  rt_parts_test.cpp  tight_alloc_test.cpp
